bizinikiwi/pezframe/support/test/tests/pezpallet_ui/dev_mode_without_arg_default_hasher.stderr
error: `_` can only be used in dev_mode. Please specify an appropriate hasher.
  --> tests/pezpallet_ui/dev_mode_without_arg_default_hasher.rs:38:47
   |
38 |     type MyStorageMap<T: Config> = StorageMap<_, _, u32, u64>;
   |                                                  ^

error[E0432]: unresolved import `pezpallet`
  --> tests/pezpallet_ui/dev_mode_without_arg_default_hasher.rs:20:9
   |
20 | pub use pezpallet::*;
   |         ^^^^^^^^^ help: a similar path exists: `test_pezpallet::pezpallet`
